feito correções finais junto ao professor para tarefa extra solicitada
