# routes/taskRoutes.js
@@ -8,7 +8,8 @@ const {
     countUserTasks,
 } = require('../controllers/taskController');
 const { authenticate } = require('../middlewares/authMiddleware');
-
+const { getTaskCounts} = require('../controllers/taskController');
+const { countCompletedTasksByUser } = require('../controllers/taskController');
 const router = express.Router();
 
 
@@ -19,5 +20,7 @@ router.post('/tasks', authenticate, createTask);
 router.put('/tasks/:id', authenticate, updateTask);
 router.delete('/tasks/:id', authenticate, deleteTask);
 router.get('/tasks/count', authenticate, countUserTasks);
+router.get('/tasks/countnum', authenticate, getTaskCounts);
+router.get('/tasks/qt', authenticate, countCompletedTasksByUser);
 
 module.exports = router;
